css/index.css
@-webkit-keyframes rubberBand {
  from {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  30% {
    -webkit-transform: scale3d(1.25, 0.75, 1);
    transform: scale3d(1.25, 0.75, 1);
  }
  40% {
    -webkit-transform: scale3d(0.75, 1.25, 1);
    transform: scale3d(0.75, 1.25, 1);
  }
  50% {
    -webkit-transform: scale3d(1.15, 0.85, 1);
    transform: scale3d(1.15, 0.85, 1);
  }
  65% {
    -webkit-transform: scale3d(0.95, 1.05, 1);
    transform: scale3d(0.95, 1.05, 1);
  }
  75% {
    -webkit-transform: scale3d(1.05, 0.95, 1);
    transform: scale3d(1.05, 0.95, 1);
  }
  to {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
@keyframes rubberBand {
  from {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  30% {
    -webkit-transform: scale3d(1.25, 0.75, 1);
    transform: scale3d(1.25, 0.75, 1);
  }
  40% {
    -webkit-transform: scale3d(0.75, 1.25, 1);
    transform: scale3d(0.75, 1.25, 1);
  }
  50% {
    -webkit-transform: scale3d(1.15, 0.85, 1);
    transform: scale3d(1.15, 0.85, 1);
  }
  65% {
    -webkit-transform: scale3d(0.95, 1.05, 1);
    transform: scale3d(0.95, 1.05, 1);
  }
  75% {
    -webkit-transform: scale3d(1.05, 0.95, 1);
    transform: scale3d(1.05, 0.95, 1);
  }
  to {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
@-webkit-keyframes flash {
  from,
  50%,
  to {
    opacity: 1;
  }
  25%,
  75% {
    opacity: 0;
  }
}
@keyframes flash {
  from,
  50%,
  to {
    opacity: 1;
  }
  25%,
  75% {
    opacity: 0;
  }
}
.flash {
  -webkit-animation-name: flash;
  animation-name: flash;
}
@-webkit-keyframes pulse {
  from {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  50% {
    -webkit-transform: scale3d(1.05, 1.05, 1.05);
    transform: scale3d(1.05, 1.05, 1.05);
  }
  to {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
@keyframes pulse {
  from {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  50% {
    -webkit-transform: scale3d(1.05, 1.05, 1.05);
    transform: scale3d(1.05, 1.05, 1.05);
  }
  to {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
.pulse {
  -webkit-animation-name: pulse;
  animation-name: pulse;
}
@-webkit-keyframes flip {
  from {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  40% {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  50% {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  80% {
    -webkit-transform: perspective(400px) scale3d(0.95, 0.95, 0.95) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    transform: perspective(400px) scale3d(0.95, 0.95, 0.95) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  to {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
}
@keyframes flip {
  from {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, -360deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  40% {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  50% {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  80% {
    -webkit-transform: perspective(400px) scale3d(0.95, 0.95, 0.95) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    transform: perspective(400px) scale3d(0.95, 0.95, 0.95) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  to {
    -webkit-transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    transform: perspective(400px) scale3d(1, 1, 1) translate3d(0, 0, 0) rotate3d(0, 1, 0, 0deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
}
.animated-flip {
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
  -webkit-animation-name: flip;
  animation-name: flip;
}
.flexr {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}
.flexc {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.flexcr {
  display: flex;
  flex-direction: column-reversed;
  justify-content: space-around;
}
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
}
html,
body {
  font-family: 'Ubuntu', sans-serif;
  color: #5E6164;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: 'Russo One', sans-serif;
  color: #23293B;
}
h2 {
  font-size: 3.2rem;
}
h3 {
  font-size: 2.8rem;
}
p {
  font-size: 1.6rem;
  line-height: 1.4;
}
.container {
  max-width: 800px;
  width: 100%;
  margin: 0 auto;
}
@media (max-width: 500px) {
  .container {
    max-width: 500px;
    width: 100%;
  }
}
.animated:hover {
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
  -webkit-animation-name: flip;
  animation-name: flip;
  animation-duration: 2s;
  animation-delay: 0s;
}
.navigation {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  justify-content: center;
  padding: 2vh 2vw;
}
.nav-item {
  font-family: 'Ubuntu', sans-serif;
  text-decoration: none;
  font-size: 1.6rem;
  color: #23293B;
  margin: 0 1.5vw;
}
.nav-item:hover {
  -webkit-animation-name: pulse;
  animation-name: pulse;
  animation-duration: 2s;
  animation-delay: 0s;
}
.major {
  text-align: center;
  font-size: 4.2rem;
  margin-top: 2vh;
  letter-spacing: -1px;
}
.main-header {
  border-radius: 5px;
  width: 100%;
}
footer {
  color: #22283B;
  background: #f4f4f4;
  padding: 20px 0;
  border: 1px double #e0e0e0;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.home .intro h2 {
  padding: 15px;
}
.home .intro p {
  padding: 0 15px;
}
.home .space-images {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}
@media (max-width: 500px) {
  .home .space-images .sky,
  .home .space-images .launch {
    display: none;
  }
}
.home .space-images img {
  width: 28%;
  margin: 20px 2.5%;
  border-radius: 20px;
  height: 100%;
}
@media (max-width: 500px) {
  .home .space-images img {
    width: 95%;
  }
}
.home .visit-planets {
  padding: 15px;
}
.home .visit-planets h3 {
  margin-top: 11px;
}
.home .visit-planets p {
  margin-top: 13px;
}
.home .walk {
  margin-top: 60px;
  border-top: 1px solid #dee2e6;
  padding: 50px 60px;
  display: flex;
  justify-content: center;
}
@media (max-width: 500px) {
  .home .walk {
    flex-direction: column-reverse;
    align-items: center;
    padding: 3vh 3vw;
  }
}
.home .walk .walk-text {
  width: 50%;
}
@media (max-width: 500px) {
  .home .walk .walk-text {
    width: 100%;
  }
}
.home .walk .walk-text h3 {
  margin-bottom: 10px;
}
.home .walk .walk-text p {
  margin-bottom: 26px;
}
.home .walk .walk-text .btn {
  color: #FFFFFF;
  background-color: #22283A;
  width: 100px;
  font-size: 1.8rem;
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
  padding: 1.2vh;
  border-radius: 5px;
  border: 1px solid #22283A;
}
@media (max-width: 500px) {
  .home .walk .walk-text .btn {
    width: 100%;
  }
}
.home .walk .walk-text .btn a {
  text-decoration: none;
  color: #FFFFFF;
}
.home .walk .walk-text .btn:hover {
  color: #22283A;
  background-color: #FFFFFF;
  -webkit-animation-name: rubberBand;
  animation-name: rubberBand;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}
.home .walk .walk-text .btn:hover a {
  text-decoration: none;
  color: #22283A;
}
.home .walk .walk-img {
  width: 46%;
  margin-left: 4%;
}
@media (max-width: 500px) {
  .home .walk .walk-img {
    width: 100%;
    margin: 0 0 2vh 0;
  }
}
.home .walk .walk-img img {
  width: 100%;
  height: auto;
  border-radius: 10px;
}
.btn {
  color: #FFFFFF;
  background-color: #22283A;
  width: 100px;
  font-size: 1.8rem;
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
  padding: 1.2vh;
  border-radius: 5px;
  border: 1px solid #22283A;
}
@media (max-width: 500px) {
  .btn {
    width: 100%;
  }
}
.btn a {
  text-decoration: none;
  color: #FFFFFF;
}
.btn:hover {
  color: #22283A;
  background-color: #FFFFFF;
  -webkit-animation-name: rubberBand;
  animation-name: rubberBand;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}
.btn:hover a {
  text-decoration: none;
  color: #22283A;
}
label {
  font-size: 1.4rem;
}
label::after {
  content: ':';
  margin-right: 1vw;
}
input,
select {
  margin: 1vh 2vw 1vh 1vw;
}

